[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warp-nextdns-manager"
dynamic = ["version"]
authors = [
    {name = "NightCodex7", email = "64925748+nightcodex7@users.noreply.github.com"},
]
description = "Cross-platform CLI tool for Cloudflare WARP with NextDNS integration"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
    "colorama>=0.4.4",
    "psutil>=5.8.0",
    "cryptography>=3.4.0",
    "pyyaml>=5.4.0",
    "rich>=10.0.0",
    "click>=8.0.0",
    "tabulate>=0.8.9",
    "python-dotenv>=0.19.0",
    "validators>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/nightcodex7/warp-nextdns-wireguard"
Issues = "https://github.com/nightcodex7/warp-nextdns-wireguard/issues"

[project.scripts]
warp-manager = "src.cli:cli"
warp-nextdns = "src.cli:cli"

[tool.setuptools.dynamic]
version = {file = "VERSION"}
